...
export default function GoBackButton({ onPress }: GoBackButtonProps) {
    return (
        <Button
            title={<Ionicons name="chevron-back" size={Sizes.buttonIcon} />}
            icon={true}
            onPress={onPress}
            accessibilityLabel="go-back-button"
        />
    );
}

