...
                                        : router.back();
                                }
                            }}
                        />
                    </View>
                    <View style={styles.titleView}>
                        <Text style={styles.titleText}>Settings</Text>
                    </View>
                    <View style={{ width: buttonWidth }} />
                </View>
                <View style={styles.middleView}>
                    {deleteView ? (
                        <>
...
