appId: com.koleks92.AvocadoroMobile # This is an example app id. Replace it with your app id.
---
- launchApp
- assertVisible: "Don't have an account yet"
- assertVisible: "Enter your email"
- assertVisible: "Enter your password"
- assertVisible: "Sign In"
- assertVisible: "shaking-logo"
- assertVisible: "google-button"

- tapOn: "shaking-logo"
- waitForAnimationToEnd:
    timeout: 3000
