appId: com.koleks92.AvocadoroMobile # This is an example app id. Replace it with your app id.
---
- launchApp
- assertVisible: "Don't have an account yet"
- assertVisible: "Enter your email"
- tapOn: "Enter your email"
- inputText: "test@mail.com"
- assertVisible: "Enter your password"
- tapOn: "Enter your password"
- inputText: "Password123456"
- assertVisible: "Sign In"
- tapOn: "signin-button"
- assertVisible: "logout-button"
- tapOn: "logout-button"
- assertVisible: "Don't have an account yet"











