appId: com.koleks92.AvocadoroMobile # This is an example app id. Replace it with your app id.
---
- launchApp
- assertVisible: "Don't have an account yet"
- assertVisible: "Enter your email"
- tapOn: "signin-button"
- assertVisible: "Incorrect email"
- tapOn: "email-field"
- inputText: "test@mail"
- tapOn: "signin-button"
- assertVisible: "Incorrect email"
- tapOn: "email-field"
- eraseText: 20
- inputText: "test@mail."
- tapOn: "signin-button"
- assertVisible: "Incorrect email"
- tapOn: "email-field"
- eraseText: 20
- inputText: "@."
- tapOn: "signin-button"
- assertVisible: "Incorrect email"
- tapOn: "email-field"
- eraseText: 20
- inputText: "text@mail.com"
- tapOn: "signin-button"
- assertVisible: "Password must be >= 10 characters and contain at least 1 digit"
- tapOn: "password-field"
- inputText: "Password"
- tapOn: "signin-button"
- assertVisible: "Password must be >= 10 characters and contain at least 1 digit"
- tapOn: "password-field"
- eraseText: 20
- inputText: "Password1"
- tapOn: "signin-button"
- assertVisible: "Password must be >= 10 characters and contain at least 1 digit"
- tapOn: "password-field"
- eraseText: 20
- inputText: "Password12345"
- tapOn: "signin-button"
- assertVisible: "Invalid login credentials"
