appId: com.koleks92.AvocadoroMobile # This is an example app id. Replace it with your app id.
---
- launchApp
- assertVisible: "Don't have an account yet"
- tapOn: "Don't have an account yet"
- tapOn: "email-field"
- inputText: "test2@mail.com"
- tapOn: "password-field"
- inputText: "Password123456"
- tapOn: "confirm-field"
- inputText: "Password123456"
- tapOn: "signup-button"
- assertVisible: "logout-button"
- tapOn: "logout-button"
- assertVisible: "Don't have an account yet"
